[14946] Make importer.div use IVirtualFilesystemService - charset fix